--- a/SMS/App.config
+++ b/SMS/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="SMS" connectionString="Data Source=RDPIMIS;Initial Catalog=SMS;    Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="SMS" connectionString="Data Source=DESKTOP-7JGFB8J;Initial Catalog=SMS;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
   <runtime>
