--- a/SMS/SMS.csproj
+++ b/SMS/SMS.csproj
@@ -212,14 +212,27 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\AccessRights.cs" />
+    <Compile Include="Class\Account.cs" />
     <Compile Include="Class\Adapter\AdapterClass.cs" />
     <Compile Include="Class\Connection.cs" />
+    <Compile Include="Class\Student.cs" />
     <Compile Include="Class\User.cs" />
     <Compile Include="Models\DataHolder.cs" />
     <Compile Include="Models\ServiceResponse.cs" />
+    <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Repository\IAccess.cs" />
+    <Compile Include="Repository\IAccount.cs" />
     <Compile Include="Repository\IAdapter.cs" />
+    <Compile Include="Repository\IStudent.cs" />
     <Compile Include="Repository\IUser.cs" />
+    <Compile Include="Views\Access\frmAccessRights.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Access\frmAccessRights.Designer.cs">
+      <DependentUpon>frmAccessRights.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Accounts\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -238,14 +251,41 @@
     <Compile Include="Views\Accounts\frmUser.Designer.cs">
       <DependentUpon>frmUser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Main\frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Main\frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Students\frmCategory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Students\frmCategory.Designer.cs">
+      <DependentUpon>frmCategory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Students\frmStudentRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Students\frmStudentRecord.Designer.cs">
+      <DependentUpon>frmStudentRecord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Students\StudentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Students\StudentForm.Designer.cs">
+      <DependentUpon>StudentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Students\frmStudentPortal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Students\frmStudentPortal.Designer.cs">
+      <DependentUpon>frmStudentPortal.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Views\Access\frmAccessRights.resx">
+      <DependentUpon>frmAccessRights.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Accounts\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -254,9 +294,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Accounts\frmUser.resx">
       <DependentUpon>frmUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -267,6 +304,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\Main\frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Students\frmCategory.resx">
+      <DependentUpon>frmCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Students\frmStudentRecord.resx">
+      <DependentUpon>frmStudentRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Students\StudentForm.resx">
+      <DependentUpon>StudentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Students\frmStudentPortal.resx">
+      <DependentUpon>frmStudentPortal.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
